--- a/templates/home.html
+++ b/templates/home.html
@@ -1,33 +1,37 @@
-<h1>Home</h1>
-<h2>Criar documento</h2>
+<h1>Catálogo de Insetos</h1>
+<h2>Registrar espécie</h2>
 <div>
     <form action="post" method="post" enctype="multipart/form-data">
-      <label for="code">Short Name</label>
-      <input type="text" class="form-control" name="code" id="code" value="" required>
+      <label for="nome_comum">Nome comum</label>
+      <input type="text" class="form-control" name="nome_comum" id="nome_comum" value="" required>
       <br>
-      <label for="url">Website URL</label>
-      <input type="url" class="form-control" name="url" id="url" value="" required>
+      <label for="nome_cientifico">Nome científico</label>
+      <input type="text" class="form-control" name="nome_cientifico" id="nome_cientifico" value="" required>
       <br>
+      <label for="ordem">Ordem</label>
+      <input type="text" class="form-control" name="ordem" id="ordem" value="" required>
+      <br>
+      <label for="file">Imagem</label>
       <input type="file" class="form-control" name="file" id="file" required>
       <br>
-      <button class="btn btn-primary btn-lg btn-block" type="submit">Shorten</button>
+      <button class="btn btn-primary btn-lg btn-block" type="submit">Enviar</button>
     </form>
   </div>
-  <h2>Deletar documento</h2>
+  <h2>Deletar registro</h2>
   <div>
-    <form action="delete_code" method="delete">
-      <label for="delete">Short Name</label>
+    <form action="delete" method="post">
+      <label for="delete">Nome comum</label>
       <input type="text" class="form-control" name="delete" id="delete" value="" required>
       <br>
-      <button class="btn btn-primary btn-lg btn-block" type="submit">Shorten</button>
+      <button class="btn btn-primary btn-lg btn-block" type="submit">Deletar</button>
     </form>
   </div>
 
   {% if documentos %}
-  <h2>Get:</h2>
+  <h2>Registros:</h2>
   <ul>
     {% for documento in documentos %}
-     <img src="{{ documento['image'] }}">{{documento['code']}} : <a href="{{documento['url']}}" target="_blank">{{documento['url']}}</a><br>
+     <img src="{{ documento['imagem'] }}" width="400">Nome comum: {{documento['nome_comum']}}, Nome científico: <i>{{documento['nome_cientifico']}}</i>, Ordem: {{ documento['ordem'] }}<br>
     {% endfor %}
   </ul>
   {% endif %}
