--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,35 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>CRUD de Insetos - Cadastro</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">CRUD de Insetos</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="listagem.html">Listagem</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cadastro.html">Cadastro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="edicao.html">Edição</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="remocao.html">Remoção</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}Cadastro de Insetos{% endblock %}
+
+{% block main %}
 
   <div class="container mt-5">
     <h2>Cadastro de Insetos</h2>
-    <form id="form-cadastro" enctype="multipart/form-data">
+    <form action="post" method="post" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="nome-comum" class="form-label">Nome Comum:</label>
         <input type="text" class="form-control" id="nome-comum" required>
@@ -43,14 +20,16 @@
         <input type="text" class="form-control" id="ordem" required>
       </div>
       <div class="mb-3">
-        <label for="imagem" class="form-label">Imagem:</label>
-        <input type="file" class="form-control" id="imagem" required>
+        <label for="file" class="form-label">Imagem:</label>
+        <input type="file" class="form-control" name="file" id="file" required>
       </div>
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  {% endblock %}
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function handleFormSubmit(event) {
         event.preventDefault();
@@ -123,4 +102,4 @@ formCadastro.addEventListener('submit', handleFormSubmit);
     formCadastro.addEventListener('submit', handleFormSubmit);
   </script>
 </body>
-</html>
+</html> -->
