--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,2 +1,10 @@
+{% extends 'base.html' %}
+
+{% block title %}Página não encontrada{% endblock %}
+
+{% block main %}
+
 <h1>Page not found :(</h1>
-<h2> Go back to our <a href='/'>Home</a></h2>
+<h2> Go back to our <a href="{{ url_for('catalog.home') }}">Home</a></h2>
+
+{% endblock %}
