--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">CRUD de Insetos</a>
+      <a class="navbar-brand" href="#">Catálogo de Insetos</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
