--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,16 +8,16 @@
     <h2>Cadastro de Insetos</h2>
     <form action="post" method="post" enctype="multipart/form-data">
       <div class="mb-3">
-        <label for="nome-comum" class="form-label">Nome Comum:</label>
-        <input type="text" class="form-control" id="nome-comum" required>
+        <label for="nome" class="form-label">Nome Comum:</label>
+        <input type="text" class="form-control" name="nome" id="nome" required>
       </div>
       <div class="mb-3">
-        <label for="nome-cientifico" class="form-label">Nome Científico:</label>
-        <input type="text" class="form-control" id="nome-cientifico" required>
+        <label for="especie" class="form-label">Nome Científico:</label>
+        <input type="text" class="form-control" name="especie" id="especie" required>
       </div>
       <div class="mb-3">
         <label for="ordem" class="form-label">Ordem:</label>
-        <input type="text" class="form-control" id="ordem" required>
+        <input type="text" class="form-control" name="ordem" id="ordem" required>
       </div>
       <div class="mb-3">
         <label for="file" class="form-label">Imagem:</label>
@@ -28,78 +28,3 @@
   </div>
 
   {% endblock %}
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function handleFormSubmit(event) {
-        event.preventDefault();
-
-        const nomeComum = document.getElementById('nome-comum').value;
-        const nomeCientifico = document.getElementById('nome-cientifico').value;
-        const ordem = document.getElementById('ordem').value;
-        const imagemFile = document.getElementById('imagem').files[0];
-
-        // Simular o envio do novo inseto para o servidor
-        console.log('Inseto cadastrado:');
-        console.log('Nome Comum:', nomeComum);
-        console.log('Nome Científico:', nomeCientifico);
-        console.log('Ordem:', ordem);
-        console.log('Imagem:', imagemFile);
-
-        //Limpar os campos do formulário
-        document.getElementById('nome-comum').value = '';
-        document.getElementById('nome-cientifico').value = '';
-        document.getElementById('ordem').value = '';
-        document.getElementById('imagem').value = '';
-    }
-
-
-// Função para lidar com a submissão do formulário de cadastro
-
-/* 
-function handleFormSubmit(event) {
-  event.preventDefault();
-
-  const nomeComum = document.getElementById('nome-comum').value;
-  const nomeCientifico = document.getElementById('nome-cientifico').value;
-  const ordem = document.getElementById('ordem').value;
-  const imagemFile = document.getElementById('imagem').files[0];
-
-  // Criar um objeto FormData para enviar os dados do formulário
-  const formData = new FormData();
-  formData.append('nomeComum', nomeComum);
-  formData.append('nomeCientifico', nomeCientifico);
-  formData.append('ordem', ordem);
-  formData.append('imagem', imagemFile);
-
-  // Simular o envio do novo inseto para o servidor
-  fetch('/cadastrar-inseto', {
-    method: 'POST',
-    body: formData
-  })
-    .then(response => response.json())
-    .then(data => {
-      console.log('Inseto cadastrado:', data);
-      // Limpar os campos do formulário
-      document.getElementById('nome-comum').value = '';
-      document.getElementById('nome-cientifico').value = '';
-      document.getElementById('ordem').value = '';
-      document.getElementById('imagem').value = '';
-    })
-    .catch(error => {
-      console.error('Erro ao cadastrar inseto:', error);
-    });
-}
-
-// Adicionar um evento de submissão ao formulário de cadastro
-const formCadastro = document.getElementById('form-cadastro');
-formCadastro.addEventListener('submit', handleFormSubmit);
-*/
-
-
-// Adicionar um evento de submissão ao formulário de cadastro
-    const formCadastro = document.getElementById('form-cadastro');
-    formCadastro.addEventListener('submit', handleFormSubmit);
-  </script>
-</body>
-</html> -->
