--- a/templates/listagem.html
+++ b/templates/listagem.html
@@ -16,62 +16,19 @@
         </tr>
       </thead>
       <tbody id="insetos-lista">
-        <!-- Insetos serão preenchidos aqui -->
+        {% if documentos %}
+          {% for documento in documentos %}
+           <tr>
+            <td>{{documento['nome']}}</td>
+            <td>{{documento['especie']}}</td>
+            <td>{{ documento['ordem'] }}</td>
+            <td><img src="{{ documento['imagem'] }}" width="100"></td>
+            </tr>
+          {% endfor %}
+        {% endif %}
       </tbody>
     </table>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-
-// Função para carregar os insetos e preencher a tabela de listagem
-function loadInsetos() {
-  const insetosLista = document.getElementById('insetos-lista');
-
-  // Simular uma lista de insetos
-  const insetos = [
-    { nomeComum: 'Borboleta', nomeCientifico: 'Lepidoptera', ordem: 'A', imagem: 'borboleta.jpg' },
-    { nomeComum: 'Abelha', nomeCientifico: 'Hymenoptera', ordem: 'B', imagem: 'abelha.jpg' },
-    { nomeComum: 'Formiga', nomeCientifico: 'Formicidae', ordem: 'C', imagem: 'formiga.jpg' },
-  ];
-
-  // Limpar o conteúdo existente
-  insetosLista.innerHTML = '';
-
-  // Preencher a tabela com os insetos
-  insetos.forEach((inseto) => {
-    const row = document.createElement('tr');
-
-    const nomeComumCell = document.createElement('td');
-    nomeComumCell.textContent = inseto.nomeComum;
-    row.appendChild(nomeComumCell);
-
-    const nomeCientificoCell = document.createElement('td');
-    nomeCientificoCell.textContent = inseto.nomeCientifico;
-    row.appendChild(nomeCientificoCell);
-
-    const ordemCell = document.createElement('td');
-    ordemCell.textContent = inseto.ordem;
-    row.appendChild(ordemCell);
-
-    const imagemCell = document.createElement('td');
-    const imagem = document.createElement('img');
-    imagem.className = 'inseto-img';
-    imagem.src = inseto.imagem;
-    imagem.alt = inseto.nomeComum;
-    imagemCell.appendChild(imagem);
-    row.appendChild(imagemCell);
-
-    insetosLista.appendChild(row);
-  });
-}
-
-// Chamar a função de carregamento de insetos quando a página carregar
-window.addEventListener('load', loadInsetos);
-
-    
-  </script> 
-  <script>
-
-  </script>
- {% endblock %}
+{% endblock %}
