--- a/templates/remocao.html
+++ b/templates/remocao.html
@@ -17,13 +17,29 @@
         </tr>
       </thead>
       <tbody id="insetos-lista">
-        <!-- Insetos serão preenchidos aqui -->
+        {% if documentos %}
+          {% for documento in documentos %}
+           <tr>
+            <td>{{documento['nome']}}</td>
+            <td>{{documento['especie']}}</td>
+            <td>{{ documento['ordem'] }}</td>
+            <td><img src="{{ documento['imagem'] }}" width="100"></td>
+            <td>
+              <form action="delete" method="post">
+                <input type="hidden" class="form-control" name="delete" id="delete" value="{{ documento['nome']}}">
+                <br>
+              <button class="btn btn-danger btn-remover" type="submit">Remover</button>
+              </form>
+            </td>
+            </tr>
+          {% endfor %}
+        {% endif %}
       </tbody>
     </table>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+  <!-- <script>
     // Função para carregar os insetos e preencher a tabela de remoção
 function loadInsetos() {
   const insetosLista = document.getElementById('insetos-lista');
@@ -97,5 +113,5 @@ document.addEventListener('click', function(event) {
 window.addEventListener('load', loadInsetos);
 
     
-  </script>
+  </script> -->
 {% endblock %}
