--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="{{ url_for('catalog.cadastro') }}">Cadastro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('catalog.edicao')}}">Edição</a>
+            <a class="nav-link" href="">Edição</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('catalog.remocao') }}">Remoção</a>
