--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}Cadastro de Insetos{% endblock %}
+{% block title %}Cadastro de Espécies{% endblock %}
 
 {% block main %}
 
   <div class="container mt-5">
-    <h2>Cadastro de Insetos</h2>
+    <h2>Cadastro de Espécies</h2>
     <form action="post" method="post" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="nome" class="form-label">Nome Comum:</label>
         <input type="text" class="form-control" name="nome" id="nome" required>
       </div>
       <div class="mb-3">
-        <label for="especie" class="form-label">Nome Científico:</label>
+        <label for="especie" class="form-label">Espécie:</label>
         <input type="text" class="form-control" name="especie" id="especie" required>
       </div>
       <div class="mb-3">
