adicinada a home e o about

--- a/templates/pagenotfound.html
+++ b/templates/pagenotfound.html
@@ -3,8 +3,8 @@
 {% block title %}Página não encontrada{% endblock %}
 
 {% block main %}
-
+<div class="container mt-5">
 <h1>Page not found :(</h1>
 <h2> Go back to our <a href="{{ url_for('catalog.home') }}">Home</a></h2>
-
+</div>
 {% endblock %}
