--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('catalog.home')}}">Lista de espécies</a>
+            <a class="nav-link" href="{{ url_for('catalog.lista')}}">Lista de espécies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('catalog.cadastro') }}">Cadastrar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('catalog.remocao') }}">Editar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('catalog.about') }}">About</a>
           </li>
         </ul>
       </div>
