--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,34 @@
 <div class="container mt-5">
     <h1>Home</h1>
     <p>Olá! Seja bem-vindo ao Catálogo de Insetos!</p>
-    <p>O catálogo de Insetos é a ferramenta perfeita para você explorar, catalogar e gerenciar informações sobre esses pequenos e fascinantes seres.</p>
+    <p>O Catálogo de Insetos é a ferramenta perfeita para você explorar, catalogar e gerenciar informações sobre esses pequenos e fascinantes seres.</p>
+    <table border="0" width="100%"
+cellpadding="10">
+<tr>
+
+<td width="50%" valign="top">
+    <ul class="funcoes">
+        <li>
+            <h3>Lista de espécies</h3>
+            <p class="funcoes-descricao">Lista todos os insetos cadastrados!</p>
+        </li>
+        <li>
+            <h3>Cadastrar</h3>
+            <p class="funcoes-descricao">Cadastro de novos insetos!</p>
+        </li>
+        <li>
+            <h3>Editar</h3>
+            <p class="funcoes-descricao">Edição e exclusão de insetos cadastrados!</p>
+        </li>
+    </ul>
+</td>
+
+<td width="50%" valign="top">
     <img src="{{ imagem }}" width="350px">
+</td>
+
+</tr>
+</table>
 </div>
 
 {% endblock %}
