--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -5,7 +5,8 @@
 {% block main %}
 <div class="container mt-5">
     <h1>Sobre este site</h1>
-    <p>Esse site foi feito para o desafio de código proposto durante as palestras de Encontro Tech do Ciclo III do Programa de Estágio da NTT Ltd.</p>
+    <p>Esse site foi feito por Breno Campos, Pedro Braga e Natalia Tolentino para o desafio de código proposto durante as palestras de Encontro Tech do Ciclo III do Programa de Estágio da NTT Ltd.</p>
+    <p><a href="https://github.com/brenobcamp/desafiontt" target="_blank">Repositório do projeto no Github</p>
     <img src="{{ imagem }}" width="350px">
 </div>
 
